load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "basic",
    srcs = ["basic.cc"],
    deps = [
        ":neural_network",
        ":tokenizer",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/strings",
        "@uchen-core//uchen/tensor",
    ],
)

cc_library(
    name = "neural_network",
    srcs = ["encoder.cc"],
    hdrs = [
        "encoder.h",
        "neural_network.h",
    ],
    deps = ["@uchen-core//uchen/tensor"],
)

cc_library(
    name = "tokenizer",
    srcs = ["tokenizer.cc"],
    hdrs = ["tokenizer.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
        "@uchen-core//uchen/tensor",
    ],
)
